--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,6 +10,10 @@ body {
   vertical-align: text-bottom;
 }
 
+.main-bg {
+  background-color: #F7F7F8;
+}
+
 /*
  * Sidebar
  */
@@ -44,16 +48,19 @@ body {
 
 .sidebar .nav-link {
   font-weight: 500;
-  color: #333;
+  /* color: #333; */
+  color: white;
 }
 
 .sidebar .nav-link .feather {
   margin-right: 4px;
-  color: #727272;
+  /* color: #727272; */
+  color: white;
 }
 
 .sidebar .nav-link.active {
-  color: #2470dc;
+  /* color: #2470dc; */
+  /* color: wheat; */
 }
 
 .sidebar .nav-link:hover .feather,
@@ -98,4 +105,16 @@ body {
 .form-control-dark:focus {
   border-color: transparent;
   box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
+}
+
+/* Cards */
+.card-footer {
+  background-color: transparent !important;
+}
+.card-category {
+  height: 5vh;
+}
+.card-stats {
+  margin-bottom: 2rem;
+  height: 25vh !important;
 }
