--- a/client/src/App.css
+++ b/client/src/App.css
@@ -106,6 +106,9 @@ body {
 .sensor-icon {
   font-size: 50px;
 }
+.login-icon {
+  font-size: 20px;
+}
 
 .sidebar .nav-link .feather {
   margin-right: 4px;
